# addon-elpi

./: Makefile  adjust_paths.js  dune  elpi.json  package.json
dune-files/: dune-project
dune-files/src/: dune
dune-files/theories/: dune
