(library
 (name elpi_plugin)
 (public_name coq-elpi.elpi)
 (flags :standard -rectypes)
 (libraries elpi coq-core.vernac coq-core.plugins.ltac))

(coq.pp (modules coq_elpi_vernacular_syntax coq_elpi_arg_syntax))

(rule
 (targets coq_elpi_builtins_HOAS.ml)
 (deps ../elpi/coq-HOAS.elpi ../Makefile ../Makefile.coq.local ../_CoqProject)
 (action
  (run make -C .. src/coq_elpi_builtins_HOAS.ml)))

