(coq.theory
 ; This determines the -R flag
 (name elpi)
 (package coq-elpi)
 (synopsis "Elpi Plugin")
 (libraries coq-elpi.elpi)
 (flags -Q elpi/workdir/elpi elpi) ; oops, this is a workspace-relative path
 (modules :standard \ derive.eqOK_trivial derive.tests.test_derive_vector))

(dirs derive ltac)
(include_subdirs qualified)
